Updated lots of stuff

--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
 						<div class="nav-project-container">
 							<article>
 								<a href="order-management.html" class="image">
-									<img src="images/order-management-team-affinity-diagram-workshop-1440x900.jpg" alt="Image of General Manager persona" />
+									<img src="images/order-management-1440x900.jpg" alt="Image of General Manager persona" />
 								</a>
 								<div class="caption">
 									<p>Designed order management system for print production facility.</p>
@@ -45,7 +45,7 @@
 									</ul>
 								</div>
 							</article>
-							<a href="order-management.html"><p>Order Management System</p></a>
+							<a href="order-management.html"><p>Order Management System (MVP)</p></a>
 						</div>
 						<div class="nav-project-container">
 							<article>
@@ -59,7 +59,7 @@
 									</ul>
 								</div>
 							</article>
-							<a href="gateway.html"><p>Peapod Gateway Page</p></a>
+							<a href="gateway.html"><p>Gateway Page Redesign</p></a>
 						</div>
 						<div class="nav-project-container">	
 							<article>
@@ -73,7 +73,7 @@
 									</ul>
 								</div>
 							</article>
-							<a href="help-section.html"><p>Peapod Help Section</p></a>
+							<a href="help-section.html"><p>Help Section Redesign</p></a>
 						</div>
 						<div class="nav-project-container">	
 							<article>
@@ -101,7 +101,7 @@
 									</ul>
 								</div>
 							</article>
-							<a href="shedd-aquarium.html"><p>Shedd Aquarium Accessibility</p></a>
+							<a href="shedd-aquarium.html"><p>Museum Exhibit Accessibility</p></a>
 						</div>
 					</div>
 				</div>
@@ -152,9 +152,10 @@
 							<div class="gallery style2 medium lightbox onscroll-fade-in">
 								<article>
 									<a href="order-management.html" class="image">
-										<img src="images/gallery/thumbs/order-management-team-affinity-diagram-workshop-thumb.jpg" alt="Image of General Manager persona" />
+										<img src="images/gallery/thumbs/order-management-thumb.jpg" alt="Image of General Manager persona" />
 									</a>
 									<div class="caption">
+										<h3>Order Management System</h3>
 										<p>Designed order management system for print production facility.</p>
 										<ul class="actions">
 											<li><span class="button small">Details</span></li>
@@ -166,7 +167,7 @@
 										<img src="images/gallery/thumbs/gateway-mobile-device-thumb.jpg" alt="Image of Peapod Gateway on a mobile device" />
 									</a>
 									<div class="caption">
-										<h3>Peapod Gateway Page</h3>
+										<h3>Gateway Page Redesign</h3>
 										<p>Redesigned Peapod Gateway page for desktop and mobile.</p>
 										<ul class="actions">
 											<li><span class="button small">Details</span></li>
@@ -178,7 +179,7 @@
 										<img src="images/gallery/thumbs/help-section-desktop-thumb.jpg" alt="Image of Peapod Help secion on desktop" />
 									</a>
 									<div class="caption">
-										<h3>Peapod Help Section</h3>
+										<h3>Help Section Redesign</h3>
 										<p>Created new information architecture for Peapod Help section.</p>
 										<ul class="actions">
 											<li><span class="button small">Details</span></li>
@@ -202,7 +203,7 @@
 										<img src="images/gallery/thumbs/tactile-otter-thumb.jpg" alt="Image of participant who is visually impared touching a tactile exhibit at the Shedd Aquarium" />
 									</a>
 									<div class="caption">
-										<h3>Shedd Aquarium Accessiblity</h3>
+										<h3>Aquarium Exhibit Accessibility</h3>
 										<p>Helped provide recommendations to Shedd Aquarium for improving exhibit accessiblity.</p>
 										<ul class="actions">
 											<li><span class="button small">Details</span></li>
