--- a/gateway.html
+++ b/gateway.html
@@ -37,7 +37,7 @@
 						<div class="nav-project-container">
 							<article>
 								<a href="order-management.html" class="image">
-									<img src="images/order-management-team-affinity-diagram-workshop-1440x900.jpg" alt="Image of General Manager persona" />
+									<img src="images/order-management-1440x900.jpg" alt="Image of General Manager persona" />
 								</a>
 								<div class="caption">
 									<p>Designed order management system for print production facility.</p>
@@ -46,7 +46,7 @@
 									</ul>
 								</div>
 							</article>
-							<a href="order-management.html"><p>Order Management System</p></a>
+							<a href="order-management.html"><p>Order Management System (MVP)</p></a>
 						</div>
 						<div class="nav-project-container">
 							<article>
@@ -60,7 +60,7 @@
 									</ul>
 								</div>
 							</article>
-							<a href="gateway.html"><p>Peapod Gateway Page</p></a>
+							<a href="gateway.html"><p>Gateway Page Redesign</p></a>
 						</div>
 						<div class="nav-project-container">	
 							<article>
@@ -74,7 +74,7 @@
 									</ul>
 								</div>
 							</article>
-							<a href="help-section.html"><p>Peapod Help Section</p></a>
+							<a href="help-section.html"><p>Help Section Redesign</p></a>
 						</div>
 						<div class="nav-project-container">	
 							<article>
@@ -102,7 +102,7 @@
 									</ul>
 								</div>
 							</article>
-							<a href="shedd-aquarium.html"><p>Shedd Aquarium Accessibility</p></a>
+							<a href="shedd-aquarium.html"><p>Museum Exhibit Accessibility</p></a>
 						</div>
 					</div>
 				</div>
@@ -118,8 +118,8 @@
 									<section class="banner onload-content-fade-right">
 										<div class="content">
 											<header>
-												<h1>Peapod Gateway Page</h1>
-												<p>Design &amp; Research</p>
+												<h1>Gateway Page Redesign</h1>
+												<p>Peapod • eCommerce • Responsive Web</p>
 											</header>
 											<span class="image fit"><img src="images/gateway-mobile-1440x900.jpg" alt="Image of Peapod Gateway on a mobile device" /></span>
 											<h2>Summary</h2>
@@ -127,7 +127,7 @@
 											<ul>
 												<li><strong>Role:</strong> UI/UX Designer</li>
 												<li><strong>Company:</strong> Peapod</li>
-												<li><strong>Methodology:</strong> Agile</li>
+												<li><strong>Methodology:</strong> Agile Scrum</li>
 												<li><strong>Tools:</strong> Usertesting.com, Axure, JIRA, Confluence</li>
 											</ul>
 										</div>
