--- a/help-section.html
+++ b/help-section.html
@@ -37,7 +37,7 @@
 						<div class="nav-project-container">
 							<article>
 								<a href="order-management.html" class="image">
-									<img src="images/order-management-team-affinity-diagram-workshop-1440x900.jpg" alt="Image of General Manager persona" />
+									<img src="images/order-management-1440x900.jpg" alt="Image of General Manager persona" />
 								</a>
 								<div class="caption">
 									<p>Designed order management system for print production facility.</p>
@@ -46,7 +46,7 @@
 									</ul>
 								</div>
 							</article>
-							<a href="order-management.html"><p>Order Management System</p></a>
+							<a href="order-management.html"><p>Order Management System (MVP)</p></a>
 						</div>
 						<div class="nav-project-container">
 							<article>
@@ -60,7 +60,7 @@
 									</ul>
 								</div>
 							</article>
-							<a href="gateway.html"><p>Peapod Gateway Page</p></a>
+							<a href="gateway.html"><p>Gateway Page Redesign</p></a>
 						</div>
 						<div class="nav-project-container">	
 							<article>
@@ -74,7 +74,7 @@
 									</ul>
 								</div>
 							</article>
-							<a href="help-section.html"><p>Peapod Help Section</p></a>
+							<a href="help-section.html"><p>Help Section Redesign</p></a>
 						</div>
 						<div class="nav-project-container">	
 							<article>
@@ -102,7 +102,7 @@
 									</ul>
 								</div>
 							</article>
-							<a href="shedd-aquarium.html"><p>Shedd Aquarium Accessibility</p></a>
+							<a href="shedd-aquarium.html"><p>Museum Exhibit Accessibility</p></a>
 						</div>
 					</div>
 				</div>
@@ -118,15 +118,17 @@
 									<section class="banner onload-content-fade-right">
 										<div class="content">
 											<header>
-												<h1>Peapod Help Section</h1>
-												<p>Design &amp; Research</p>
+												<h1>Help Section Redesign</h1>
+												<p>Peapod • eCommerce • Responsive Web</p>
 											</header>
 											<span class="image fit"><img src="images/help-section-desktop-1440x900.jpg" alt="Image of Peapod Help section on dekstop" /></span>
 											<h2>Summary</h2>
 											<p>With the redesign of the Peapod website, the existing Help section became outdated. This presented the opportunity for me to consolidate articles and construct a new, optimal information architecture.</p>
 											<ul>
 												<li><strong>Role:</strong> UI/UX Designer</li>
-												<li><strong>Deliverables:</strong> Hi-fi interactive prototype</li>
+												<li><strong>Company:</strong> Peapod</li>
+												<li><strong>Methodology:</strong> Agile Scrum</li>
+												<li><strong>Tools:</strong> Optimal Sort, Axure, JIRA, Confluence</li>
 											</ul>
 										</div>
 									</section>
@@ -202,7 +204,9 @@
 				<!-- Process -->
 					<section class="wrapper style1 align-left">
 						<div class="inner medium">
-							<h2>Design Problem</h2>
+							<h2>Problem Space</h2>
+
+							<h3>Main constraints to consider:</h3>
 							<ul>
 								<li>Existing help section lacked proper hierarchy of information</li>
 								<li>Existing help section had redundant or out of date articles</li>
@@ -210,36 +214,51 @@
 								<li>New help section must support mobile, mini-tablet, tablet &amp; desktop</li>
 								<li>Must comply with WCAG 2.0 AA standards</li>
 							</ul>
+
+							<h2>Process</h2>
+
 							<h2>Methods</h2>
 							<div class="items style1 medium align-center onscroll-fade-in">
 								<section>
-									<span class="icon style2 major fa-desktop"></span>
-									<h3>Heuristic Evaluation</h3>
+									<span class="icon style2 major  fa-copy"></span>
+									<h3>Competitive Analysis</h3>
+									<p>I analyzed competitor websites such as Instacart &amp; FreshDirect.</p>
 								</section>
 								<section>
-									<span class="icon style2 major fa-group"></span>
-									<h3>Observations</h3>
+									<span class="icon style2 major fa-desktop"></span>
+									<h3>Heuristic Evaluation</h3>
+									<p>I documented instances of standard usability issues.</p>
 								</section>
 								<section>
 									<span class="icon style2 major fa-th"></span>
 									<h3>Card Sorting</h3>
+									<p>I conducted open card sorting to define categories.</p>
 								</section>
 								<section>
 									<span class="icon style2 major  fa-pencil"></span>
 									<h3>Sketching</h3>
+									<p>I sketched and rapidly iterated design ideas.</p>
 								</section>
 								<section>
 									<span class="icon style2 major fa-object-group"></span>
 									<h3>Prototyping</h3>
+									<p>I designed and prototyped a high fidelity interactive prototype.</p>
 								</section>
 								<section>
 									<span class="icon style2 major fa-user"></span>
 									<h3>User Testing</h3>
+									<p>I conducted usability testing to find usability issues witht the design.</p>
 								</section>
 							</div>
+
+							<h2>Deliverables</h2>
+							<ul>
+								<li>Hi-fi Interactive Prototype (Axure)</li>
+							</ul>
+
 							<h2>Results</h2>
 							<ul>
-								<li>New help section has a hierarchy of information that is more logical to users</li>
+								<li>New help section has a hierarchy of information that is more logical to users.</li>
 								<li>Users are able to search and browse help articles</li>
 								<li>New help section's fluid layout supports mobile, mini-tablet, tablet &amp; desktop</li>
 							</ul>
