--- a/ice-burg.html
+++ b/ice-burg.html
@@ -37,7 +37,7 @@
 						<div class="nav-project-container">
 							<article>
 								<a href="order-management.html" class="image">
-									<img src="images/order-management-team-affinity-diagram-workshop-1440x900.jpg" alt="Image of General Manager persona" />
+									<img src="images/order-management-1440x900.jpg" alt="Image of General Manager persona" />
 								</a>
 								<div class="caption">
 									<p>Designed order management system for print production facility.</p>
@@ -46,7 +46,7 @@
 									</ul>
 								</div>
 							</article>
-							<a href="order-management.html"><p>Order Management System</p></a>
+							<a href="order-management.html"><p>Order Management System (MVP)</p></a>
 						</div>
 						<div class="nav-project-container">
 							<article>
@@ -60,7 +60,7 @@
 									</ul>
 								</div>
 							</article>
-							<a href="gateway.html"><p>Peapod Gateway Page</p></a>
+							<a href="gateway.html"><p>Gateway Page Redesign</p></a>
 						</div>
 						<div class="nav-project-container">	
 							<article>
@@ -74,7 +74,7 @@
 									</ul>
 								</div>
 							</article>
-							<a href="help-section.html"><p>Peapod Help Section</p></a>
+							<a href="help-section.html"><p>Help Section Redesign</p></a>
 						</div>
 						<div class="nav-project-container">	
 							<article>
@@ -102,7 +102,7 @@
 									</ul>
 								</div>
 							</article>
-							<a href="shedd-aquarium.html"><p>Shedd Aquarium Accessibility</p></a>
+							<a href="shedd-aquarium.html"><p>Museum Exhibit Accessibility</p></a>
 						</div>
 					</div>
 				</div>
@@ -119,13 +119,16 @@
 										<div class="content">
 											<header>
 												<h1>Ice-Burg Project</h1>
-												<p>Design &amp; Research</p>
+												<p>DePaul • Exhibit Design • Interactive Art Installation</p>
 											</header>
 											<span class="image fit"><img src="images/touching-ice-burg-1440x900.jpg" alt="Image of Peapod Gateway on a mobile device" /></span>
 											<h2>Summary</h2>
 											<p>I was part of a team that won a grant to create an <a href="https://drive.google.com/file/d/0B0B_W6bUJMLYUm5odndxbUczR1k/view?usp=sharing" target="_blank">interactive art installation</a> that we called "Ice-Burg", which responds to proximity and touch by engaging the user with music and lights. Ice-Burg explores the concept of placemaking in public spaces by encouraging interactions and connecting people who would otherwise not know each other.</p>
 											<ul>
 												<li><strong>Role:</strong> Design Lead (fabrication), Scrum Master</li>
+												<li><strong>Organization:</strong> DePaul University</li>
+												<li><strong>Methodology:</strong> Agile Scrum</li>
+												<li><strong>Tools:</strong> </li>
 												<li><strong>Deliverables:</strong> <a href="https://drive.google.com/file/d/0B1doyfzA9kezdEVSNWlVN0dxN00/view" target="_blank">Decision Table</a>, <a href="https://drive.google.com/file/d/0B1doyfzA9kezZ3ZsWW1xemJJXzA/view" target="_blank">Data Flow Diagram</a>, <a href="https://www.youtube.com/watch?v=VUIrc_OMx3c" target="_blank">Interactive sculptures</a></li>
 											</ul>
 										</div>
@@ -238,12 +241,17 @@
 				<!-- Process -->
 					<section class="wrapper style1 align-left">
 						<div class="inner medium">
-							<h2>Design Problem</h2>
+							<h2>Problem Space</h2>
+
+							<h3>Main constraints to consider:</h3>
 							<ul>
 								<li>Materials must not exceed $500</li>
 								<li>Scupltures must respond to user proximity, touch, as well as relay inputs to corresponding sculpture</li>
 								<li>Must have a working prototype within a twelve week time span</li>
 							</ul>
+
+							<h2>Process</h2>
+
 							<h2>Methods</h2>
 							<div class="items style1 medium align-center onscroll-fade-in">
 								<section>
@@ -271,6 +279,9 @@
 									<h3>User Testing</h3>
 								</section>
 							</div>
+
+							<h2>Deliverables</h2>
+
 							<h2>Results</h2>
 							<ul>
 								<li>We were able to create a functional life size prototype</li>
