--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 						<div class="nav-project-container">
 							<article>
 								<a href="order-management.html" class="image">
-									<img src="images/order-management-team-affinity-diagram-workshop-1440x900.jpg" alt="Image of General Manager persona" />
+									<img src="images/order-management-1440x900.jpg" alt="Image of General Manager persona" />
 								</a>
 								<div class="caption">
 									<p>Designed order management system for print production facility.</p>
@@ -45,7 +45,7 @@
 									</ul>
 								</div>
 							</article>
-							<a href="order-management.html"><p>Order Management System</p></a>
+							<a href="order-management.html"><p>Order Management System (MVP)</p></a>
 						</div>
 						<div class="nav-project-container">
 							<article>
@@ -59,7 +59,7 @@
 									</ul>
 								</div>
 							</article>
-							<a href="gateway.html"><p>Peapod Gateway Page</p></a>
+							<a href="gateway.html"><p>Gateway Page Redesign</p></a>
 						</div>
 						<div class="nav-project-container">	
 							<article>
@@ -73,7 +73,7 @@
 									</ul>
 								</div>
 							</article>
-							<a href="help-section.html"><p>Peapod Help Section</p></a>
+							<a href="help-section.html"><p>Help Section Redesign</p></a>
 						</div>
 						<div class="nav-project-container">	
 							<article>
@@ -101,7 +101,7 @@
 									</ul>
 								</div>
 							</article>
-							<a href="shedd-aquarium.html"><p>Shedd Aquarium Accessibility</p></a>
+							<a href="shedd-aquarium.html"><p>Museum Exhibit Accessibility</p></a>
 						</div>
 					</div>
 				</div>
@@ -117,7 +117,7 @@
 								<h1>Tristan Bernardo</h1>
 								<p>Product Designer</p>
 							</header>
-							<p class="major">Experienced Product Designer who relies on research methodology and testable artifacts, to design solutions that meet or exceed business goals and user needs.</p>
+							<p class="major">Experienced Product Designer who relies on research methodology and testable artifacts, to design solutions for business goals and user needs.</p>
 							<ul class="actions vertical">
 								<li><a href="about.html" class="button big wide">Read More</a></li>
 							</ul>
@@ -131,16 +131,16 @@
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
 							<header>
-								<h2>Order Management System</h2>
-								<p>FinTech</p>
+								<h2>Order Management System (MVP)</h2>
+								<p>Stretto • FinTech • Intranet Site</p>
 							</header>
-							<p>I was tasked with designing a system that would allow Stretto's print and mail facility to bring the legal noticing business in-house which would result in capturing $2 million in annual revenue.</p>
+							<p class="major">Designed an order management system for a legal services print and mail facility, which would allow the company to capturing $2 million in annual revenue.</p>
 							<ul class="actions vertical">
 								<li><a href="order-management.html" class="button big wide">Details</a></li>
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/order-management-team-affinity-diagram-workshop-1440x900.jpg" alt="Image of Peapod Gateway on a mobile device" />
+							<img src="images/order-management-1440x900.jpg" alt="Image of Peapod Gateway on a mobile device" />
 						</div>
 					</section>
 
@@ -148,10 +148,10 @@
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<header>
-								<h2>Peapod Gateway Page</h2>
-								<p>eCommerce</p>
+								<h2>Gateway Page Redesign</h2>
+								<p>Peapod • eCommerce • Responsive Web</p>
 							</header>
-							<p>As part of a complete overhaul of the Peapod website, I designed a new responsive Gateway page which resulted in reducing the bounce rate by 30%.</p>
+							<p class="major">Designed a new responsive gateway page for an online grocery site which resulted in a reduction in bounce rate by 30%.</p>
 							<ul class="actions vertical">
 								<li><a href="gateway.html" class="button big wide">Details</a></li>
 							</ul>
@@ -165,10 +165,10 @@
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<header>
-								<h2>Peapod Help Section</h2>
-								<p>eCommerce</p>
+								<h2>Help Section Redesign</h2>
+								<p>Peapod • eCommerce • Responsive Web</p>
 							</header>
-							<p>With the redesign of the Peapod website, the existing Help section became outdated. This presented the opportunity for me to consolidate articles and construct a new, optimal information architecture.</p>
+							<p class="major">Redesigned a new help section for an online grocery site which resulted in a new, optimal information architecture.</p>
 							<ul class="actions vertical">
 								<li><a href="help-section.html" class="button big wide">Details</a></li>
 							</ul>
@@ -183,9 +183,9 @@
 						<div class="content">
 							<header>
 								<h2>Ice-Burg Project</h2>
-								<p>Exhibit Design</p>
+								<p>DePaul • Exhibit Design • Interactive Art Installation</p>
 							</header>
-							<p>I was part of a team that won a grant to create an interactive art installation entitled "Ice-Burg", that responds to proximity and touch by engaging the user with music and lights. Ice-Burg explores the concept of placemaking in public spaces by encouraging interactions and connecting people who would otherwise not know each other.</p>
+							<p class="major">Helped design and build an interactive art installation, which encourages interaction and connections among viewers.</p>
 							<ul class="actions vertical">
 								<li><a href="ice-burg.html" class="button big wide">Details</a></li>
 							</ul>
@@ -199,10 +199,10 @@
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<header>
-								<h2>Shedd Aquarium Accessibility</h2>
-								<p>Exhibit Design</p>
+								<h2>Aquarium Exhibit Accessibility</h2>
+								<p>Shedd Aquarium • Exhibit Design • Accessibility Report</p>
 							</header>
-							<p>Currently most museums do not design their exhibits to accommodate visitors with disabilities, particularly those with visual impairments. I was part of a team that investigated this problem space, and provided recommendations for improvement to the Shedd Aquarium in Chicago.</p>
+							<p class="major">Helped investigate the accessibility of exhibits at the Shedd Aquarium for visitors with disabilities, and provided recommendations for improvement.</p>
 							<ul class="actions vertical">
 								<li><a href="shedd-aquarium.html" class="button big wide">Details</a></li>
 							</ul>
