--- a/shedd-aquarium.html
+++ b/shedd-aquarium.html
@@ -37,7 +37,7 @@
 						<div class="nav-project-container">
 							<article>
 								<a href="order-management.html" class="image">
-									<img src="images/order-management-team-affinity-diagram-workshop-1440x900.jpg" alt="Image of General Manager persona" />
+									<img src="images/order-management-1440x900.jpg" alt="Image of General Manager persona" />
 								</a>
 								<div class="caption">
 									<p>Designed order management system for print production facility.</p>
@@ -46,7 +46,7 @@
 									</ul>
 								</div>
 							</article>
-							<a href="order-management.html"><p>Order Management System</p></a>
+							<a href="order-management.html"><p>Order Management System (MVP)</p></a>
 						</div>
 						<div class="nav-project-container">
 							<article>
@@ -60,7 +60,7 @@
 									</ul>
 								</div>
 							</article>
-							<a href="gateway.html"><p>Peapod Gateway Page</p></a>
+							<a href="gateway.html"><p>Gateway Page Redesign</p></a>
 						</div>
 						<div class="nav-project-container">	
 							<article>
@@ -74,7 +74,7 @@
 									</ul>
 								</div>
 							</article>
-							<a href="help-section.html"><p>Peapod Help Section</p></a>
+							<a href="help-section.html"><p>Help Section Redesign</p></a>
 						</div>
 						<div class="nav-project-container">	
 							<article>
@@ -102,7 +102,7 @@
 									</ul>
 								</div>
 							</article>
-							<a href="shedd-aquarium.html"><p>Shedd Aquarium Accessibility</p></a>
+							<a href="shedd-aquarium.html"><p>Museum Exhibit Accessibility</p></a>
 						</div>
 					</div>
 				</div>
@@ -118,14 +118,16 @@
 									<section class="banner onload-content-fade-right">
 										<div class="content">
 											<header>
-												<h1>Shedd Aquarium Accessibility</h1>
-												<p>Research</p>
+												<h1>Museum Exhibit Accessibility</h1>
+												<p>Shedd Aquarium • Exhibit Design • Accessibility Report</p>
 											</header>
 											<span class="image fit"><img src="images/tactile-otter-1440x900.jpg" alt="Image of Peapod Gateway on a mobile device" /></span>
 											<h2>Summary</h2>
 											<p>Currently most museums do not design their exhibits to accommodate visitors with disabilities, particularly those with visual impairments. I was part of a team that investigated this problem space, and provided recommendations for improvement to the Shedd Aquarium in Chicago.</p>
 											<ul>
 												<li><strong>Role:</strong> Moderator, Guide</li>
+												<li><strong>Organization:</strong> Shedd Aquarium</li>
+												<li><strong>Tools:</strong> Stormboard</li>
 												<li><strong>Deliverables:</strong> <a href="https://drive.google.com/file/d/0B1doyfzA9kezVmUxRlZfRDlDbzA/view" target="_blank">Accessibility Report</a>, <a href="https://docs.google.com/presentation/d/1VQFPk5PR9gTSCMuiYOozoOcWVVr1evjHA13kxkKJ5Lo/edit?usp=sharing" target="_blank">Presentation</a></li>
 											</ul>
 										</div>
