Fixed Prototype Image
added image class fit

--- a/order-management.html
+++ b/order-management.html
@@ -643,7 +643,7 @@
 								<h3>Prototype</h3>
 								<p>From the data collected I was able to put together a complete picture of what the Production Team needed to carry out their work, and translate that into a low fidelity functional prototype. This prototype was useful for collecting feedback from the key stakeholder and the Development Team. I did not show the prototype to the Production Team because I wanted to keep them fresh for User Testing.</p>
 
-								<a href="https://l0qev0.axshare.com" target="_blank"><img src="images/order-management/prototype.gif"></a></p>
+								<a href="https://l0qev0.axshare.com" target="_blank"><img src="images/order-management/prototype.gif" class="image fit"></a></p>
 
 								<p><a href="https://l0qev0.axshare.com" target="_blank">View Low-fi Interactive Prototype (Axure) <span class="icon fa-external-link"></span></a></p>
 
