Updated Page Title

--- a/order-management.html
+++ b/order-management.html
@@ -11,7 +11,7 @@
 
 		  gtag('config', 'UA-129383153-1');
 		</script>
-		<title>Tristan Bernardo | Product Designer: Order management System</title>
+		<title>Tristan Bernardo | Product Designer: Order management System (MVP)</title>
 		<meta name="robots" content="noindex,nofollow">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
