--- a/order-management.html
+++ b/order-management.html
@@ -260,7 +260,7 @@
 
 						<div class="inner medium">
 							<h3>Synthesize</h3>
-							<p>To process the transcripts from the user interviews I ran an affinity diagramming workshop with a team of Product Owners, Designers, and Developers. My motivation for the workshop was to get a cross functional team involved as early in the process as possible, so we all could learn about the users together. I also wanted to expose the team to the User Centered Design process since none of them had heard of it.</p>
+							<p>To process the transcripts from the user interviews I ran an affinity diagramming workshop with a team of Product Owners, Designers, and Developers. My motivation for the workshop was to get a cross functional team involved as early in the process as possible, so we all could learn about the users together. I also wanted to expose the team to the User Centered Design process since none of them had experienced it before.</p>
 
 							<p>For the workshop I printed out excerpts from the interviews on colored index cards. I had team members highlight the important information and take notes. We then grouped the cards and taped them up on the wall. Over the course of two days we continued to sort and group the cards and together we distilled themes and insights from the data. At the end of the process the team commented that they enjoyed the collaborative hands on approach.</p>
 
