--- a/order-management.html
+++ b/order-management.html
@@ -152,9 +152,9 @@
 							</ol>
 							<h3>Constraints</h3>
 								<ul>
-									<li>Re-routing orders from third party system to new internal system and data field standardization.</li>
-									<li>Supporting user profiles and permissions.</li>
-									<li>Supporting order submission, order status for internal and external users, routing of orders to multiple facilities, and reporting.</li>
+									<li>Re-routing orders from third party system to new internal system requires data field standardization.</li>
+									<li>Must support user profiles and permissions.</li>
+									<li>Must support order submission, order status for internal and external users, routing of orders to multiple facilities, and reporting.</li>
 									<li>Must integrate with upstream systems (order submission &amp; payment lookup) and downstream systems (billing &amp; invoicing).</li>
 									<li>Must allowing for future integrations with other business systems.</li>
 								</ul>
