--- a/help-section.html
+++ b/help-section.html
@@ -269,7 +269,7 @@
 					<section class="wrapper style1 align-center">
 						<div class="inner medium">
 							<h2>Get in Touch</h2>
-							<p>Feel free to reach out to me regarding work opportunities. You may also find me on <a href="https://www.linkedin.com/in/tkbernardo/" target="_blank">LinkedIn</a>.</p>
+							<p>Please note only a subset of my work can be displayed online due to NDA's. Feel free to reach out to me regarding work opportunities. You may also find me on <a href="https://www.linkedin.com/in/tkbernardo/" target="_blank">LinkedIn</a>.</p>
 							<form method="post" action="//formspree.io/tkbernardo@gmail.com">
 								<div class="field half first">
 									<label for="name">Name</label>
