--- a/order-management.html
+++ b/order-management.html
@@ -264,7 +264,7 @@
 
 							<p>For the workshop I printed out excerpts from the interviews on colored index cards. I had team members highlight the important information and take notes. We then grouped the cards and taped them up on the wall. Over the course of two days we continued to sort and group the cards and together we distilled themes and insights from the data. At the end of the process the team commented that they enjoyed the collaborative hands on approach.</p>
 
-							<p>The following are categories the team pulled from the data:</p>
+							<p>The team was able to pull the following themes from the data:</p>
 							<ul>
 								<li>Roles</li>
 								<li>Team Dynamics</li>
