--- a/order-management.html
+++ b/order-management.html
@@ -390,7 +390,7 @@
 									</div>
 									
 									<h4>Personas</h4>
-									<p>To communicate the users' goals and pain points I created artifacts for the two personas that came out of the data - General Manager, and Production Team Member.</p>
+									<p>To communicate the users' goals and pain points I synthesized two personas that came out of the data - General Manager, and Production Team Member.</p>
 									<div class="gallery lightbox">
 										<article>
 											<a href="images/order-management/order-management-persona1.jpg"><img src="images/order-management/order-management-persona1.jpg" class="image fit "></a>
