--- a/order-management.html
+++ b/order-management.html
@@ -648,7 +648,7 @@
 								<p><a href="https://l0qev0.axshare.com" target="_blank">View Low-fi Interactive Prototype (Axure) <span class="icon fa-external-link"></span></a></p>
 
 								<h3>Validate</h3>
-								<p>Before the release of the system to End Users I conducted a Usability Study with five Production Team members. From this study I documented and prioritized bugs and usability issues to be fixed. The majority of the issues I found related to connectivity and system performance issues.</p>
+								<p>Before the release of the system to end users I conducted a usability test with five Production Team members. From this study I documented and prioritized bugs and usability issues to be fixed. The majority of the issues I found related to connectivity and system performance issues.</p>
 
 								<div class="box">
 									<h4>Usability Test Highlights</h4>
