--- a/about.html
+++ b/about.html
@@ -49,31 +49,17 @@
 						</div>
 						<div class="nav-project-container">
 							<article>
-								<a href="gateway.html" class="image">
+								<a href="peapod.html" class="image">
 									<img src="images/gateway-mobile-1440x900.jpg" alt="Image of Peapod Gateway on a mobile device" />
 								</a>
 								<div class="caption">
-									<p>Redesigned Peapod Gateway page for desktop and mobile.</p>
+									<p>Helped redesign world's first E-commerce experience for responsive web.</p>
 									<ul class="actions">
 										<li><span class="button small">Details</span></li>
 									</ul>
 								</div>
 							</article>
-							<a href="gateway.html"><p>Gateway Page Redesign</p></a>
-						</div>
-						<div class="nav-project-container">	
-							<article>
-								<a href="help-section.html" class="image">
-									<img src="images/help-section-desktop-1440x900.jpg" alt="Image of Peapod Help secion on desktop" />
-								</a>
-								<div class="caption">
-									<p>Created new information architecture for Peapod Help section.</p>
-									<ul class="actions">
-										<li><span class="button small">Details</span></li>
-									</ul>
-								</div>
-							</article>
-							<a href="help-section.html"><p>Help Section Redesign</p></a>
+							<a href="peapod.html"><p>Peapod Online Grocery</p></a>
 						</div>
 						<div class="nav-project-container">	
 							<article>
