--- a/index.html
+++ b/index.html
@@ -130,16 +130,16 @@
 						</div>
 					</section>
 
-				<!-- Peapod Gateway -->
+				<!-- Peapod Online Grocery -->
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<header>
-								<h2>Gateway Page Redesign</h2>
+								<h2>Peapod Online Grocery</h2>
 								<p>Peapod • eCommerce • Responsive Web</p>
 							</header>
-							<p class="major">Designed a new responsive gateway page for an online grocery site which resulted in a reduction in bounce rate by 30%.</p>
+							<p class="major">Helped improve shopping experience for an online grocery site which included a reduction in bounce rate by 30% for the Gateway page, and an optimal information architecture for the Help section.</p>
 							<ul class="actions vertical">
-								<li><a href="gateway.html" class="button big wide">Details</a></li>
+								<li><a href="peapod.html" class="button big wide">Details</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -147,25 +147,8 @@
 						</div>
 					</section>
 
-				<!-- Peapod Help Section -->
-					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
-						<div class="content">
-							<header>
-								<h2>Help Section Redesign</h2>
-								<p>Peapod • eCommerce • Responsive Web</p>
-							</header>
-							<p class="major">Redesigned a new help section for an online grocery site which resulted in a new, optimal information architecture.</p>
-							<ul class="actions vertical">
-								<li><a href="help-section.html" class="button big wide">Details</a></li>
-							</ul>
-						</div>
-						<div class="image">
-							<img src="images/help-section-desktop-1440x900.jpg" alt="Image of Peapod Help Section on desktop" />
-						</div>
-					</section>
-
 				<!-- Ice-Burg -->
-					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
+					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<header>
 								<h2>Ice-Burg Project</h2>
@@ -182,7 +165,7 @@
 					</section>
 
 				<!-- Shedd Aquarium -->
-					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
+					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<header>
 								<h2>Aquarium Exhibit Accessibility</h2>
