--- a/peapod.html
+++ b/peapod.html
@@ -181,7 +181,7 @@
 
 							<h4>Prototype</h4>
 							<p>Finally I prototyped a high fidelity interactive prototype of a new gateway page for developers to implement.</p>
-							<iframe src="https://player.vimeo.com/video/567510930?loop=1&amp;autoplay=0&amp;title=0&amp;byline=0&amp;portrait=0" width="312" height="640" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen="" id="yui_3_17_2_1_1624631429081_77" class="image fit"></iframe>
+							<iframe src="https://player.vimeo.com/video/567510930?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" width="404" height="832" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen title="Peapod Gateway Mobile Prototype" class="image fit"></iframe>
 
 							<p><a href="https://4m8hf1.axshare.com" target="_blank">View High-fi Interactive Prototype (Axure) <span class="icon fa-external-link"></span></a></p>
 
@@ -241,11 +241,11 @@
 
 							<h4>Prototype</h4>
 							<p>Finally I prototyped mobile and tablet versions for development.</p>
-							<iframe src="https://player.vimeo.com/video/568171814?loop=1&amp;autoplay=0&amp;title=0&amp;byline=0&amp;portrait=0" width="312" height="640" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen="" id="yui_3_17_2_1_1624631429081_77" class="image fit"></iframe>
+							<iframe src="https://player.vimeo.com/video/568171814?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" width="404" height="832" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen title="Peapod Mobile Help Section Prototype" class="image fit"></iframe>
 
 							<p><a href="https://co6x9p.axshare.com" target="_blank">View Mobile High-fi Interactive Prototype (Axure) <span class="icon fa-external-link"></span></a></p>
 
-							<iframe src="https://player.vimeo.com/video/568180694?loop=1&amp;autoplay=0&amp;title=0&amp;byline=0&amp;portrait=0" width="312" height="640" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen="" id="yui_3_17_2_1_1624631429081_77" class="image fit"></iframe>
+							<iframe src="https://player.vimeo.com/video/568180694?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" width="1066" height="720" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen title="Peapod Tablet Help Section Prototype" class="image fit"></iframe>
 
 							<p><a href="https://lpw3cu.axshare.com" target="_blank">View Tablet High-fi Interactive Prototype (Axure) <span class="icon fa-external-link"></span></a></p>
 
